--- a/src/global/styles/_text-size.scss
+++ b/src/global/styles/_text-size.scss
@@ -1,5 +1,6 @@
 $title-size: 40px;
 $sub-title-size: 32px;
+$large-font-size: 24px;
 $middle-font-size: 20px;
 $normal-font-size: 16px;
 $small-font-size: 14px;
